# dht22-webui

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
static/: site.webmanifest
templates/: index.html
